bug with weather parser fixed

--- a/myopenweather.properties
+++ b/myopenweather.properties
@@ -1,4 +1,4 @@
 path.variable.maven_repository=/home/olesia/.m2/repository
-jdk.home.1.8=/home/olesia/Java/jdk1.8.0_77
+jdk.home.1.8=/home/olesia/Java/jdk1.8.0_linux-i586
 idea.home=/home/olesia/IDEA/idea-IU-139.659.2
 javac2.instrumentation.includeJavaRuntime=false
