added forgotten upgrade

--- a/myopenweather.properties
+++ b/myopenweather.properties
@@ -1,4 +1,5 @@
+path.variable.kotlin_bundled=/home/olesia/IDEA/idea-IU-163.12024.16/plugins/Kotlin/kotlinc
 path.variable.maven_repository=/home/olesia/.m2/repository
-jdk.home.1.8=/home/olesia/Java/jdk1.8.0_linux-i586
-idea.home=/home/olesia/IDEA/idea-IU-139.659.2
+jdk.home.1.8=/home/olesia/JAVA/jdk1.8.0_111 x86
+idea.home=/home/olesia/IDEA/idea-IU-163.12024.16
 javac2.instrumentation.includeJavaRuntime=false
